changed instances of Pair<String, String> to ClassTokens record